# ai-assisted-annotation-client

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README  README.md  eclipse-cpp-google-style.xml  setup.py
CMakeExternals/: ITK.cmake  Poco.cmake  SuperBuild.cmake  nlohmann_json.cmake
cmake/: Config.cmake.in
cpp-client/: CMakeLists.txt  Doxyfile
cpp-client/CMakeExternals/: SuperBuild.cmake
cpp-client/cmake/: Config.cmake.in  ConfigVersion.cmake.in
cpp-client/include/nvidia/aiaa/: aiaautils.h  client.h  common.h  curlutils.h  exception.h  imageinfo.h  itkutils.h  log.h  model.h  pointset.h  polygon.h  utils.h
cpp-client/src/: aiaautils.cpp  client.cpp  curlutils.cpp  imageinfo.cpp  itkutils.cpp  model.cpp  pointset.cpp  polygon.cpp  utils.cpp
cpp-client/test/data/: pointset.json  polygons-old.json
cpp-client/test/src/: test-json.cpp
cpp-client/tools/: CMakeLists.txt  commonutils.h
cpp-client/tools/aiaa/: aiaa-deepgrow.cpp  aiaa-dextra3d.cpp  aiaa-fix-polygon.cpp  aiaa-inference.cpp  aiaa-mask-polygon.cpp  aiaa-model.cpp  aiaa-sampling3d.cpp  aiaa-segmentation.cpp  aiaa-session.cpp
cpp-client/tools/dicom/: dicom-to-nifti.cpp  nifti-to-dicom.cpp
docs/: .gitignore  Makefile  architecture.rst  build.rst  build.sh  client.rst  conf.py  contribute.rst  index.rst  install.rst  python_api.rst  quickstart.rst  tools.rst
docs/templates/: layout.html
mitk-plugin/: README.md
mitk-plugin/CMake/: FindNvidiaAIAAClient.cmake
mitk-plugin/CMake/PackageDepends/: MITK_NvidiaAIAAClient_Config.cmake
mitk-plugin/CMakeExternals/: ExternalProjectList.cmake  NvidiaAIAAClient.cmake
mitk-plugin/Modules/: ModuleList.cmake
mitk-plugin/Modules/NvidiaAIAAModule/: CMakeLists.txt  files.cmake
mitk-plugin/Modules/NvidiaAIAAModule/include/: NvidiaDeepgrowSegTool2D.h  NvidiaDextrSegTool3D.h  NvidiaPointSetDataInteractor.h  NvidiaSmartPolySegTool2D.h
mitk-plugin/Modules/NvidiaAIAAModule/src/: NvidiaDeepgrowSegTool2D.cpp  NvidiaDextrSegTool3D.cpp  NvidiaPointSetDataInteractor.cpp  NvidiaSmartPolySegTool2D.cpp
mitk-plugin/Plugins/: PluginList.cmake
mitk-plugin/Plugins/org.mitk.nvidia.aiaa/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
mitk-plugin/Plugins/org.mitk.nvidia.aiaa/src/: NvidiaDeepgrowSegTool2DGUI.cpp  NvidiaDeepgrowSegTool2DGUI.h  NvidiaDeepgrowSegTool2DGUI.ui  NvidiaDextrSegTool3DGUI.cpp  NvidiaDextrSegTool3DGUI.h  NvidiaDextrSegTool3DGUI.ui  NvidiaSmartPolySegTool2DGUI.cpp  NvidiaSmartPolySegTool2DGUI.h  NvidiaSmartPolySegTool2DGUI.ui
mitk-plugin/Plugins/org.mitk.nvidia.aiaa/src/internal/: PluginActivator.cpp  PluginActivator.h  QmitkNvidiaAIAAPreferencePage.cpp  QmitkNvidiaAIAAPreferencePage.h  QmitkNvidiaAIAAPreferencePage.ui
py-client/: .gitignore  aas_tests.json  client_api.py  readme.md  test_aiaa_server.py
py_client/: aas_tests.json  client_api.py  readme.md  requirements.txt  test_aiaa_server.py
py_client/test-data/: fixpolygon.input.json  mask2polygon.input.json
slicer-plugin/: .gitignore  CMakeLists.txt  README.md
slicer-plugin/NvidiaAIAA/: .gitignore  AIAAClient.py  CMakeLists.txt  SegmentEditorNvidiaAIAA.py
slicer-plugin/NvidiaAIAA/SegmentEditorNvidiaAIAALib/: SegmentEditorEffect.py  SegmentEditorNvidiaAIAA.ui
test/: CMakeLists.txt
test/data/: polygons.json  polygonslist.json
test/src/: test-json.cpp
tools/: commonutils.h
tools/aiaa/: aiaa-fix-polygon.cpp
